fixed collapsable navbar

--- a/GTHindex.css
+++ b/GTHindex.css
@@ -29,14 +29,18 @@ h1:hover {
     top: 20em;
 }
 
-.main-nav {
+/* .navbar {
     display: -webkit-flex;
     display: flex;
     -webkit-justify-content: center;
     justify-content: center;
-}
+} */
 
-.main-nav a {
+/* .container-fluid {
+    width: 40%;
+} */
+
+.navbar a {
     padding: 0.25rem 0;
     font-weight: 700;
     font-size: x-large;
@@ -49,7 +53,7 @@ h1:hover {
     transition: opacity 1s;
     opacity: 50%;
     color: blanchedalmond;
-    border-bottom-color: white;
+    /* border-bottom-color: white; */
 }
 
 
@@ -59,13 +63,13 @@ section {
 
 .blurb {
     /* text-align: end; */
-    padding: 5%;
+
     margin: 5%;
     font-weight: 50;
     font-size: 1.125rem;
     line-height: 2;
-    color: whitesmoke;
-    font-family: 'Ma Shan Zheng', cursive;
+    color: #dda15e;
+    font-family: 'Yuji Boku', serif;
 }
 
 
@@ -73,7 +77,7 @@ section {
 footer {
     position: fixed;
     bottom: 2%;
-    font-family: 'Ma Shan Zheng', cursive;
+    font-family: 'Yuji Boku', serif;
     color: #000000;
 }
 
